tests/parse_print/random_perturb/set01/delete-03/stderr.expected
Conjure is exiting due to user errors.
Error:
    tests/parse_print/random_perturb/set01/delete-03/delete-03.essence line 3, column 20:
Unsupported attributes for set: sze
Only these are supported: size, minSize, maxSize
    line 3, column 20
    find x : set (sze 2) of int(1..3)
                    ^^^^^^^